# e2e-flow

./: .dockerignore  .gitignore  DATA_PULLING_SUMMARY.md  Dockerfile  README.md  SECURITY_CHECKLIST.md  build-and-push-github.sh  build-and-push.sh  deploy.sh  docker-compose.yml  docker_cleanup.py  entrypoint.sh  env.example  get-prefect-url.sh  google_compute_quickstart.md  main.py  prefect.yaml  prefect_test.py  pyproject.toml  replication_slot_monitor.py  setup-prefect-env.sh  snowflake-setup.sql  spcs-service-spec.yaml  test-local-container.sh
crunchy_bridge_connection/: README.md  __init__.py  connection.py  csv_loader.py
docs/: CHANGES.md  CREATE_WORK_POOL.md  DEPLOYMENT_GUIDE.md  DOCKERFILE_CHANGES.md  GET_PREFECT_URL.md  PREFECT_AUTH.md  PREFECT_CHANGES.md  PREFECT_SETUP.md  QUICKSTART.md  README.md  SECURITY_CHECKLIST.md  google_compute_quickstart.md
eve_online_data/: .gitignore  README.md  __init__.py  eve_market_pull.py
grid_data/: AVAILABLE_DATA_FIELDS.md  CLI_USAGE_GUIDE.md  DETAIL_LEVELS_QUICK_REF.md  ENHANCED_DATA_GUIDE.md  ML_FEATURES_GUIDE.md  QUICK_START.md  README.md  TITLE_ID_MAPPING.md  __init__.py  grid_data_pull.py
prefect/: prefect_test.py
prefect_flows/: __init__.py  prefect_test.py
